# wb_humanoid_mpc

./: Makefile
robot_models/vinmotion_m1a_2v1/m1a_2v1_centroidal_mpc/: CMakeLists.txt  package.xml
robot_models/vinmotion_m1a_2v1/m1a_2v1_centroidal_mpc/config/command/: reference.info
robot_models/vinmotion_m1a_2v1/m1a_2v1_centroidal_mpc/config/mpc/: task.info
robot_models/vinmotion_m1a_2v1/m1a_2v1_centroidal_mpc/launch/: dummy_sim.launch.py
robot_models/vinmotion_m1a_2v1/m1a_2v1_description/: CMakeLists.txt  m1A_2v1_23dof.xml  package.xml  scene_m1A_2v1_23dof.xml
robot_models/vinmotion_m1a_2v1/m1a_2v1_description/launch/: display.launch.py
robot_models/vinmotion_m1a_2v1/m1a_2v1_description/meshes/: head_link.STL  left_ankle_pitch_link.STL  left_ankle_roll_link.STL  left_elbow_link.STL  left_shoulder_pitch_link.STL  left_shoulder_roll_link.STL  left_shoulder_yaw_link.STL  left_wrist_link.STL  right_ankle_pitch_link.STL  right_ankle_roll_link.STL  right_elbow_link.STL  right_shoulder_pitch_link.STL  right_shoulder_roll_link.STL  right_shoulder_yaw_link.STL  right_wrist_link.STL
robot_models/vinmotion_m1a_2v1/m1a_2v1_description/urdf/: Motion_A_V2.1.urdf
robot_models/vinmotion_m1a_2v1/m1a_2v1_wb_mpc/: CMakeLists.txt  package.xml
robot_models/vinmotion_m1a_2v1/m1a_2v1_wb_mpc/config/command/: reference.info
robot_models/vinmotion_m1a_2v1/m1a_2v1_wb_mpc/config/mpc/: task.info
robot_models/vinmotion_m1a_2v1/m1a_2v1_wb_mpc/launch/: wb_dummy_sim.launch.py
